--- a/index.html
+++ b/index.html
@@ -3,12 +3,13 @@
 <head>
 	<title>Changing styles</title>
 	<meta charset="utf-8">
+	<link rel="stylesheet" href="regular">
 	<script type="text/javascript" src="script.js"></script>
 </head>
 
 <body>
 	<nav>
-		<a id="style1" href="#">Regular Style</a> <a id="style2" href="#">Minimalist Style</a>
+		<a id="regular" href="#">Regular Style</a> <a id="minimalist" href="#">Minimalist Style</a>
 	</nav>
 	<header>
 		<h1>Changing styles</h1>
