Updated CSS references II

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 	<title>Changing styles</title>
 	<meta charset="utf-8">
-	<link rel="stylesheet" href="regular">
+	<link rel="stylesheet" href="regular.css">
 	<script type="text/javascript" src="script.js"></script>
 </head>
 
