--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 	<title>Changing styles</title>
 	<meta charset="utf-8">
-	<link rel="stylesheet" href="regular.css">
+	<link id="link-css" rel="stylesheet" href="regular.css">
 	<script type="text/javascript" src="script.js"></script>
 </head>
 
@@ -24,4 +24,4 @@
 		<p>This is inside a frame</p>
 	</footer>
 </body>
-</html> 
+</html>
