Added icons to set Text Align and Font Size

--- a/index.html
+++ b/index.html
@@ -10,13 +10,22 @@
 <body>
 	<nav>
 		<a id="regular" href="#">Regular Style</a> <a id="minimalist" href="#">Minimalist Style</a>
+
 	</nav>
 	<header>
 		<h1>Changing styles</h1>
+		<img class="icon" id="left-align" src="resources/left-align.png" alt="Left Align">
+		<img class="icon" id="right-align" src="resources/right-align.png" alt="Right Align">
+		<img class="icon" id="justify-align" src="resources/justify-align.png" alt="Justify">
+		<img class="icon" id="font-dec" src="resources/font-dec.png" alt="Decrease Font Size">
+		<img class="icon" id="font" src="resources/font.png" alt="Default Font Size">
+		<img class="icon" id="font-inc" src="resources/font-inc.png" alt="Increase Font Size">
 	</header>
 	<section>
-		<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolorum ipsam, architecto sapiente neque nesciunt corrupti nostrum exercitationem incidunt dolores doloremque omnis laudantium repudiandae fugit reprehenderit saepe eius corporis vel magni.</p>
-		<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet ullam animi in dolores doloribus accusantium perferendis delectus obcaecati enim maxime.</p>
+		<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolorum ipsam, architecto sapiente neque nesciunt corrupti nostrum exercitationem incidunt dolores doloremque omnis laudantium repudiandae fugit reprehenderit saepe eius corporis vel magni. Magni, maiores. Sed tempore, incidunt consequatur impedit minus esse voluptas nemo eligendi ex saepe, vitae repellat eveniet debitis eius porro! Dolorem, accusamus.</p>
+		<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Blanditiis laborum voluptate, culpa dolor, accusamus velit natus sint magni voluptas perspiciatis nihil placeat ex mollitia laudantium error ullam facere ut architecto?</p>
+		<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Natus aliquid voluptatum nisi labore suscipit tenetur atque accusantium, cumque incidunt error officiis ad praesentium, laboriosam quidem blanditiis impedit excepturi repellat ipsa.</p>
+		<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ex natus non molestias tempore neque maxime fuga, incidunt saepe expedita. Dolore laboriosam, obcaecati provident molestiae earum eveniet porro totam, animi expedita!</p>
 		<p class="regular">Using CSS we can even hide some stuff.<br>
 		<span class="bold">This is only visible in regular style</span></p>
 	</section>
